--- a/views/index.pug
+++ b/views/index.pug
@@ -43,10 +43,10 @@ html(lang='en')
                           // POST FULL BG
                           .post-full-bg
                             .post-content.margin-top.display-flex.flex-direction-column.justify-content-flex-end.newsman-object-fit
-                              img(src='./img/01.jpg' alt='1')
+                              img(src=val.image alt='1')
                               .post-title
                                 a(href='/single/')
-                                  h2.no-margin-bottom val.title
+                                  h2.no-margin-bottom= val.title
                          
                           .newsman-block
                             .newsman-block-title.display-flex.align-items-center.justify-content-space-between
