--- a/views/index.pug
+++ b/views/index.pug
@@ -57,15 +57,15 @@ html(lang='en')
                                 a.badge.bg-color-white.text-color-black(href='#') SEE ALL
                             .newsman-block-content
                               .blog-list-wrapper
-                                .blog-list.display-flex.align-items-start.flex-direction-row-reverse
-                                  .blog-list-img.newsman-object-fit
-                                    img(src='./img/09.jpg' alt='bl1')
-                                  .blog-list-infos.margin-right.margin-top
-                                    h2.margin-bottom-half.no-margin-top
-                                      a(href='/single/')
-                                        | Physical distancing. Image created
-                                        | by Samuel Rodriguez.
-                                    span Sience . 26 May, 2020
+                                each val, index in part2
+                                  .blog-list.display-flex.align-items-start.flex-direction-row-reverse
+                                    .blog-list-img.newsman-object-fit
+                                      img(src='./img/09.jpg' alt='bl1')
+                                    .blog-list-infos.margin-right.margin-top
+                                      h2.margin-bottom-half.no-margin-top
+                                        a(href='/single/')=val.title
+                                           
+                                      span Sience . 26 May, 2020
                           // World News TV
                           .newsman-block.no-border
                             .newsman-block-title.display-flex.align-items-center.justify-content-space-between
