--- a/views/index1.html
+++ b/views/index1.html
@@ -61,7 +61,7 @@
                             class="post-content margin-top display-flex flex-direction-column justify-content-flex-end newsman-object-fit">
                             <img src="<%= student.image %>" alt="1" />
                             <div class="post-title">
-                              <a href="/single/">
+                              <a href="https://noticiasti.xyz/<%= student.vreme %>">
                                 <h2 class="no-margin-bottom">
                                   <%= student.title %>
                                 </h2>
@@ -105,7 +105,7 @@
                     </div>
                     <div class="blog-list-infos margin-right margin-top">
                       <h2 class="margin-bottom-half no-margin-top">
-                        <a href="/single/">
+                        <a href="/<%= student.vreme %>">
                           <%= student.title %>
                         </a>
                       </h2>
@@ -137,7 +137,7 @@
                   <div class="masonry-item">
                     <img src="<%= student.image %>" alt="m1" class="masonry-img" />
                     <div class="post-title">
-                      <a href="/single/">
+                      <a href="/<%= student.vreme %>">
                         <h2 class="no-margin-bottom">
                           <%= student.title %>
                         </h2>
