--- a/views/index1.html
+++ b/views/index1.html
@@ -61,7 +61,7 @@
                             class="post-content margin-top display-flex flex-direction-column justify-content-flex-end newsman-object-fit">
                             <img src="<%= student.image %>" alt="1" />
                             <div class="post-title">
-                              <a href="https://noticiasti.xyz/<%= student.vreme %>">
+                              <a href="/<%= student.vreme %>/">
                                 <h2 class="no-margin-bottom">
                                   <%= student.title %>
                                 </h2>
@@ -162,7 +162,7 @@
   <script src="js/macy.js"></script>
   <script src="js/feather.min.js"></script>
   <script src="js/framework7.bundle.min.js"></script>
-  <script src="js/routes.js"></script>
+  <script src="/routes.js"></script>
   <script src="js/app.js"></script>
 </body>
 
