--- a/views/single.html
+++ b/views/single.html
@@ -1,4 +1,5 @@
 <div class="page page-single">
+  <link rel="stylesheet" href="/css/app.css" />
   <div class="page-content">
     <!-- Navbar -->
     <div class="navbar navbar-transparent">
@@ -9,25 +10,26 @@
             <i class="icon icon-back"></i>
           </a>
         </div>
-
       </div>
     </div>
     <!-- -->
     <div class="newsman-block no-margin">
       <div class="newsman-block-content">
         <div class="single-page">
-          <img src="<%= image %>" alt="bp1">
+
           <div class="margin-top">
 
             <h2>
               <%= title %>
             </h2>
+            <img src="<%= image %>" alt="bp1">
             <div class="post-author display-flex align-items-center">
               <div class="post-author-img bg-color-pink newsman-object-fit">
                 <img src="./img/user6.png" alt="user6">
               </div>
               <div class="post-author-infos margin-left-half">
-                <span class="post-author-name display-block text-semibold"><a href="/profile/">Mike Fox</a></span>
+                <span class="post-author-name display-block text-semibold"><a href="/profile/">Alejandro
+                    Garcia</a></span>
                 <span class="post-author-extra">San francisco</span>
               </div>
             </div>
