--- a/views/index1.html
+++ b/views/index1.html
@@ -86,7 +86,7 @@
             <div class="newsman-block-title display-flex align-items-center justify-content-space-between">
               <div>
                 <div class="block-title-medium no-margin block-title text-semibold">
-                  Hot topics
+                  Tendencias
                 </div>
                 <div class="newsman-opacity block-title no-margin newsman-block-subtitle">
                   Read trending news
@@ -121,7 +121,7 @@
             <div class="newsman-block-title display-flex align-items-center justify-content-space-between">
               <div>
                 <div class="block-title-medium no-margin block-title text-semibold">
-                  World News TV
+                  Mundo Noticias TV
                 </div>
                 <div class="newsman-opacity block-title no-margin newsman-block-subtitle">
                   Read trending news
