--- a/views/index1.html
+++ b/views/index1.html
@@ -41,7 +41,7 @@
                     Noticias TI
                   </div>
                   <div class="newsman-opacity block-title no-margin newsman-block-subtitle">
-                    Read trending news
+                    Noticias de actualidad
                   </div>
                 </div>
                 <div class="newsman-badge">
@@ -89,7 +89,7 @@
                   Tendencias
                 </div>
                 <div class="newsman-opacity block-title no-margin newsman-block-subtitle">
-                  Read trending news
+                  Noticias de actualidad
                 </div>
               </div>
               <div class="newsman-badge">
@@ -124,7 +124,7 @@
                   Mundo Noticias TV
                 </div>
                 <div class="newsman-opacity block-title no-margin newsman-block-subtitle">
-                  Read trending news
+                  Noticias de actualidad
                 </div>
               </div>
               <div class="newsman-badge">
