--- a/views/index1.html
+++ b/views/index1.html
@@ -124,7 +124,7 @@
                   Mundo Noticias TV
                 </div>
                 <div class="newsman-opacity block-title no-margin newsman-block-subtitle">
-                  Noticias de actualidad
+                  noticias de ultima hora
                 </div>
               </div>
               <div class="newsman-badge">
