--- a/views/index1.html
+++ b/views/index1.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="css/app.css" />
   <link rel="apple-touch-icon" href="img/f7-icon-square.png" />
   <link rel="icon" href="img/f7-icon.png" />
+  <script data-ad-client="ca-pub-5476404733919333" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body class="theme-dark color-theme-white">
