--- a/views/noticias/index1.html
+++ b/views/noticias/index1.html
@@ -10,10 +10,10 @@
   <meta name="theme-color" content="#000000" />
   <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap:" />
   <title>Noticias TI</title>
-  <link rel="stylesheet" href="css/framework7.bundle.min.css" />
-  <link rel="stylesheet" href="css/app.css" />
+  <link rel="stylesheet" href="noticias/css/framework7.bundle.min.css" />
+  <link rel="stylesheet" href="noticias/css/app.css" />
   <link rel="apple-touch-icon" href="img/f7-icon-square.png" />
-  <link rel="icon" href="img/f7-icon.png" />
+  <link rel="icon" href="noticias/img/f7-icon.png" />
   <script data-ad-client="ca-pub-5476404733919333" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
@@ -161,11 +161,11 @@
       <!-- /Toolbar -->
     </div>
   </div>
-  <script src="js/macy.js"></script>
-  <script src="js/feather.min.js"></script>
-  <script src="js/framework7.bundle.min.js"></script>
+  <script src="noticias/js/macy.js"></script>
+  <script src="noticias/js/feather.min.js"></script>
+  <script src="noticias/js/framework7.bundle.min.js"></script>
   <script src="/routes.js"></script>
-  <script src="js/app.js"></script>
+  <script src="noticias/js/app.js"></script>
 </body>
 
 </html>
