--- a/views/noticias/index.html
+++ b/views/noticias/index.html
@@ -162,7 +162,7 @@
   <script src="js/macy.js"></script>
   <script src="js/feather.min.js"></script>
   <script src="js/framework7.bundle.min.js"></script>
-  <script src="/routes.js"></script>
+  <script src="/routes"></script>
   <script src="js/app.js"></script>
 </body>
 
